# PyARCA

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  SKILL.md  facturar.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-agent.yml
docs/: CLAUDE.md.example
ejemplos/: factura_electronica.py
plantillas/: factura_e.csv
src/pyafipws/: __init__.py  utils.py  wsaa.py
src/pyafipws/agricultura/: wsctg.py  wslpg.py  wslpg_datos.py  wslsp.py  wsltv.py  wslum.py
src/pyafipws/cli/: rece1.py  receb1.py  recem.py  recet.py  recex1.py
src/pyafipws/facturacion/: wdigdepfiel.py  ws_sire.py  wsbfev1.py  wscdc.py  wscoc.py  wsct.py  wsfecred.py  wsfev1.py  wsfexv1.py  wsmtx.py
src/pyafipws/formatos/: __init__.py  formato_cot.py  formato_csv.py  formato_dbf.py  formato_json.py  formato_sql.py  formato_txt.py  formato_xml.py
src/pyafipws/padron/: padron.py  sired.py  ws_sr_padron.py
src/pyafipws/pdf/: pyemail.py  pyfepdf.py  pyi25.py  pyqr.py  register_pyqr.py
src/pyafipws/provincial/: cot.py  iibb.py  rg3685.py
src/pyafipws/remitos/: wscpe.py  wscpe_cli.py  wsremazucar.py  wsremcarne.py  wsremharina.py
src/pyafipws/trazabilidad/: trazafito.py  trazamed.py  trazaprodmed.py  trazarenpre.py  trazavet.py
tests/: test_facturar.py  test_pyemail.py  test_pyfepdf.py  test_pyi25.py  test_pyqr.py  test_ws_sr_padron.py  test_wsbfev1.py  test_wsbfev1_receb1.py  test_wscdc.py  test_wscpe.py  test_wsct.py  test_wsfev1.py  test_wsfev1_dummy.py  test_wsfev1_rece1.py  test_wsfexv1.py  test_wsfexv1_recex1.py  test_wslsp.py  test_wsltv.py  test_wslum.py  test_wsmtx.py  test_wsmtx_recem.py  test_wsremcarne.py  trazamed.py  wscdc.py  wsfev1.py  wslpg.py  wsmtx.py
